<resources>
    <string name="app_name">LFA</string>
    <string name="app_logo">app logo</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_message">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="terms_description">I accept terms and conditions</string>
    <string name="empty_field">This field is required</string>
    <string name="select_gender">Select Gender</string>
    <string name="terms_must_message">Accepting terms and condition is must</string>
    <string name="invalid_email">Invalid email id</string>
    <string name="password_mismatch">Password Mis-match</string>
    <string name="listview">ListView</string>
    <string name="recycler_view">Recycler View</string>
    <string name="category">Category</string>
    <string name="year">Year</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="empty_data">We have no data to show</string>
    <string name="download_image_using_async">Download image using async</string>
    <string name="download_image">download image</string>
    <string name="json_parsing">Json Parsing(API)</string>
    <string name="json_api">Json API</string>
    <string name="picasso">Picasso</string>
    <string name="retrofit">Retrofit</string>
    <string name="Download">download</string>
    <string name="realm">Realm</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Database">Database</string>
    <string name="ui">UI</string>
    <string name="spinner">Spinner</string>
    <string name="network">Network</string>
    <string name="view_pager">View Pager</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_maps">Location</string>
    <string name="camera">Camera</string>
    <string name="image">image</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="permission_required">This permission is required</string>
    <string name="linkify">Linkify</string>
    <string name="long_text"><![CDATA[The Blockchain Applications Seminar will present an in-depth review of blockchain technology for non-technical persons: 1) To understand how blockchain works and 2) Learn how to use blockchain and distributed ledger technology to solve real-world problems.   The seminar will run as a two hour presentation with a Q&A and networking event following.   Cost:  A learning fee of $10 will be charged for admission. Registration in the Solidity Coding Bootcamp (https://www.facebook.com/events/1905999036330912/) waives this fee. ...   Please visit http://intellimatix.co/#training to sign-up for email alerts.]]></string>
</resources>
