<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="np.cnblabs.accountdemo.MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="16dp"
           android:background="@android:drawable/editbox_background"
           android:orientation="vertical">
           <TextView
               android:id="@+id/titleTV"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/email_id"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="@dimen/dimen5"
               android:layout_gravity="end"
               android:text="@string/logout"
               android:onClick="logout"/>
       </LinearLayout>


       <Spinner
           android:id="@+id/spinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/listview"
           android:onClick="showList"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/recycler_view"
           android:onClick="showRecyclerView"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/download_image_using_async"
           android:onClick="downloadImage"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/json_parsing"
           android:onClick="apiCall"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/picasso"
           android:onClick="showImage"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/retrofit"
           android:onClick="callRetrofit"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/realm"
           android:onClick="callRealm"/>
   </LinearLayout>
</ScrollView>
