<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/dimens_16"
    android:background="@color/white"
    tools:context="np.cnblabs.accountdemo.Login">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/lf_logo"
        android:contentDescription="@string/app_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_textInputLayout"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:onClick="validate"
        android:textColor="@color/white"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:gravity="center"
       android:orientation="horizontal">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/no_account_message"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:onClick="signup"
           android:layout_marginLeft="10dp"
           android:text="@string/signup"/>
   </LinearLayout>

</LinearLayout>
