<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_16">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <android.support.design.widget.TextInputLayout
               android:id="@+id/fName_textInputLayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <EditText
                   android:id="@+id/fName_editText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="text"
                   android:hint="@string/first_name"/>
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/lName_textInputLayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <EditText
                   android:id="@+id/lName_editText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="text"
                   android:hint="@string/last_name"/>
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/email_textInputLayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <EditText
                   android:id="@+id/email_editText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textEmailAddress"
                   android:hint="@string/email_id"/>
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/password_textInputLayout"
               android:layout_width="match_parent"
               app:passwordToggleEnabled="true"
               android:layout_height="wrap_content">
               <EditText
                   android:id="@+id/password_editText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textPassword"
                   android:hint="@string/password"/>
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/cPassword_textInputLayout"
               android:layout_width="match_parent"
               app:passwordToggleEnabled="true"
               android:layout_height="wrap_content">
               <EditText
                   android:id="@+id/cPassword_editText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textPassword"
                   android:hint="@string/confirm_password"/>
           </android.support.design.widget.TextInputLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="16dp"
               android:text="@string/gender"/>

           <RadioGroup
               android:id="@+id/gender_radioGroup"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:weightSum="10">
               <RadioButton
                   android:id="@+id/male_radioBtn"
                   android:layout_width="0dp"
                   android:layout_weight="5"
                   android:layout_height="wrap_content"
                   android:text="@string/male"/>

               <RadioButton
                   android:id="@+id/female_radioBtn"
                   android:layout_width="0dp"
                   android:layout_weight="5"
                   android:layout_height="wrap_content"
                   android:text="@string/female"/>
           </RadioGroup>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/dimens_16">
               <CheckBox
                   android:id="@+id/tc_checkBox"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_alignBaseline="@+id/tc_checkBox"
                   android:layout_alignBottom="@+id/tc_checkBox"
                   android:layout_toEndOf="@+id/tc_checkBox"
                   android:text="@string/terms_description" />
           </RelativeLayout>

           <Button
               android:id="@+id/signupBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/colorPrimary"
               android:layout_marginTop="16dp"
               android:text="@string/signup"
               android:textColor="@color/white"/>
       </LinearLayout>
    </ScrollView>
</LinearLayout>