<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimens_16"
    android:layout_marginEnd="@dimen/dimens_16"
    android:layout_weight="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="80"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font20"
            android:textStyle="bold"
            android:padding="@dimen/dimen5"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/categoryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen5"
            android:text="@string/category"/>
    </LinearLayout>

    <TextView
        android:id="@+id/yearTV"
        android:layout_width="0dp"
        android:layout_weight="20"
        android:layout_gravity="center"
        android:padding="@dimen/dimen5"
        android:layout_height="wrap_content"
        android:text="@string/year"/>
</LinearLayout>